--- a/@uportal/esco-content-menu/package.json
+++ b/@uportal/esco-content-menu/package.json
@@ -11,6 +11,7 @@
     "@uportal/open-id-connect": "^1.36.0",
     "lodash": "^4.17.15",
     "match-sorter": "^6.3.1",
+    "swiper": "^5.2.0",
     "vue": "^2.6.6",
     "vue-awesome-swiper": "^4.1.1",
     "vue-i18n": "^8.17.7",
