--- a/@uportal/eyebrow-user-info-lit/package.json
+++ b/@uportal/eyebrow-user-info-lit/package.json
@@ -16,6 +16,8 @@
   ],
   "main": "dist/js/eyebrow-user-info.js",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@lit/localize": "^0.11.1",
     "core-js": "^3.19.1",
     "lit": "^2.0.2"
