--- a/@uportal/extended-uportal-header/package.json
+++ b/@uportal/extended-uportal-header/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@gip-recia/extended-uportal-header",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "a component to deport the uPortal menu",
   "author": "Gregory Brousse <pro@gregory-brousse.fr>",
-  "main": "index.js",
+  "main": "dist/js/extended-uportal-header.js",
   "dependencies": {
     "@babel/runtime": "^7.18.6",
     "@gip-recia/esco-content-menu-lit": "^0.1.1",
