--- a/@uportal/extended-uportal-header/package.json
+++ b/@uportal/extended-uportal-header/package.json
@@ -6,6 +6,9 @@
   "main": "dist/js/extended-uportal-header.js",
   "dependencies": {
     "@babel/runtime": "^7.18.6",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@gip-recia/esco-content-menu-lit": "^0.1.14",
     "@gip-recia/eyebrow-user-info-lit": "^0.1.3",
     "core-js": "^3.25.1",
