--- a/@uportal/esco-content-menu-lit/package.json
+++ b/@uportal/esco-content-menu-lit/package.json
@@ -37,6 +37,7 @@
     "@babel/plugin-transform-runtime": "^7.18.6",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-typescript": "^7.17.12",
+    "@gip-recia/change-etab": "^1.0.0",
     "@lit/localize-tools": "^0.6.3",
     "@types/lodash": "^4.14.182",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
