--- a/@uportal/esco-content-menu-lit/package.json
+++ b/@uportal/esco-content-menu-lit/package.json
@@ -14,6 +14,9 @@
     "menu",
     "user-info"
   ],
+  "files": [
+    "dist"
+  ],
   "main": "dist/js/esco-content-menu.js",
   "dependencies": {
     "@babel/runtime": "^7.18.6",
